--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Battle Diva</title>
     <link rel="stylesheet" href="css/main.css" />
-  </head>
+</head>
 
-  <body>
-    <header></header>
+<body>
+    <header>
+        <h1></h1>
+    </header>
 
-    <main></main>
+    <main>
+        <section id="game-screen">
+
+        </section>
+    </main>
 
     <footer></footer>
 
     <script src="js/app.js"></script>
-  </body>
+</body>
+
 </html>
