--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <footer></footer>
 
-    <script src="js/app.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 
 </html>
