--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     </header>
 
     <main>
+        <h1>Choose your starter diva:</h1>
         <section id="game-screen">
-
+            <button id="start-button">Start Game</button>
+            <section id="diva-container"></section>
         </section>
     </main>
 
