Add basic battle mechanics

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 
 <body>
     <header>
-        <h1></h1>
+        <h1 id="header">Choose your starter diva:</h1>
     </header>
 
     <main>
-        <h1>Choose your starter diva:</h1>
         <section id="game-screen">
             <button id="start-button">Start Game</button>
             <section id="diva-container"></section>
+        </section>
+        <section id="battle-menu">
         </section>
     </main>
 
