--- a/pages/battle.html
+++ b/pages/battle.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battle Divas</title>
-    <link rel="stylesheet" href="css/main.css" />
-    <link href="/favicon.ico" type="image/x-icon" rel="icon" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link href="../favicon.ico" type="image/x-icon" rel="icon" />
 
 </head>
 
 <body>
-    <header>
-        <h1 id="header">Choose your starter diva:</h1>
+    <header id="header">
     </header>
 
     <main>
@@ -27,7 +26,7 @@
     <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="../js/battle.js"></script>
 </body>
 
 </html>
