--- a/pages/battle.html
+++ b/pages/battle.html
@@ -17,7 +17,14 @@
     <main>
         <section id="game-screen">
             <button id="start-button">Restart</button>
-            <section id="diva-container"></section>
+            <section id="battle-container">
+                <div id="player-diva"></div>
+                <div id="attack-window">
+                    <div id="player-attack"></div>
+                    <div id="enemy-attack"></div>
+                </div>
+                <div id="enemy-diva"></div>
+            </section>
         </section>
         <section id="battle-menu">
         </section>
